NYS-109: Adjust breakpoint for adminbar overlap fix

--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header/nysenate-header.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header/nysenate-header.scss
@@ -1180,7 +1180,7 @@ a:hover.c-header--btn.c-header--btn__taking_action {
 }
 
 // On mobile, ensure admin toolbar doesn't expand over header
-@include breakpoint($bp-under-xsm) {
+@include breakpoint($bp-under-sm) {
   .toolbar-vertical {
     #gin-toolbar-bar {
       height: 39.5px;
